# filament

./: .gitignore  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
_filament/: __init__.py
filament/: __init__.py  _util.py  exc.py  io.py  locking.py  patcher.py  pyqueue.py  pysocket.py  queue.py  socket.py  ssl.py  thread.py  threading.py  thrpool.py  thrpool_resolver.py  timer.py
filament/eventlet_compat/: __init__.py  greenthread.py  main.py
filament/patcher/: __init__.py  os.py  socket.py
include/: fil_cond.h  fil_exceptions.h  fil_iothread.h  fil_lock.h  fil_message.h  fil_queue.h  fil_scheduler.h  fil_semaphore.h  fil_util.h  fil_waiter.h  filament.h
include/core/: fil_exceptions.h  fil_fifoq.h  fil_message.h  fil_scheduler.h  fil_thrpool.h  fil_util.h  fil_waiter.h  fil_wfifoq.h  filament.h
include/io/: fil_io.h  fil_iothread.h
include/locking/: fil_cond.h  fil_lock.h  fil_semaphore.h
include/queue/: fil_queue.h
include/socket/: fil_socket.h
include/timer/: fil_timer.h
src/: cext.c  fil_cond.c  fil_exceptions.c  fil_io.c  fil_iothread.c  fil_lock.c  fil_message.c  fil_queue.c  fil_scheduler.c  fil_semaphore.c  fil_timer.c  fil_util.c  fil_waiter.c  filament.c
src/core/: fil_exceptions.c  fil_message.c  fil_scheduler.c  filament.c
src/io/: fil_io.c  fil_iothread.c
src/locking/: fil_cond.c  fil_lock.c  fil_locking.c  fil_semaphore.c
src/queue/: fil_queue.c  fil_queue_mod.c  fil_simple_queue.c
src/socket/: fil_socket.c
src/thrpool/: fil_thrpool.c
src/timer/: fil_timer.c
tests/: test_queue.py  test_sched.py  test_socket.py
