[metadata]
name = filament
version = 0.0.1
author = Chris Behrens
author-email = cbehrens@codestud.com
summary = Filament: Microthreads for Python
description-file = README.rst
license = MIT License
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    filament

[extension=_filament]
language = c
name = _filament
include_dirs = 
    ./include
sources =
    src/cext.c
    src/filament.c
    src/fil_cond.c
    src/fil_lock.c
    src/fil_message.c
    src/fil_queue.c
    src/fil_scheduler.c
    src/fil_semaphore.c
    src/fil_util.c
    src/fil_exceptions.c
    src/fil_iothread.c
    src/fil_io.c
    src/fil_timer.c

libraries =
    pthread
    event_pthreads
    event_core

[build_ext]
inplace = 1

[clean]
all = 1
