[metadata]
name = filament
version = 0.0.1
author = Chris Behrens
author-email = cbehrens@codestud.com
summary = Filament: Microthreads for Python
description-file = README.rst
license = MIT License
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    filament
    _filament

[extension=_filament.core]
language = c
name = _filament.core
include_dirs = 
    ./include
sources =
     src/core/filament.c
     src/core/fil_scheduler.c
     src/core/fil_exceptions.c
     src/core/fil_message.c

libraries =
    pthread

[extension=_filament.queue]
language = c
name = _filament.queue
include_dirs = 
    ./include
sources =
    src/queue/fil_queue.c

libraries =
    pthread

[extension=_filament.locking]
language = c
name = _filament.locking
include_dirs = 
    ./include
sources =
    src/locking/fil_cond.c
    src/locking/fil_lock.c
    src/locking/fil_locking.c
    src/locking/fil_semaphore.c

libraries =
    pthread

[extension=_filament.timer]
language = c
name = _filament.timer
include_dirs = 
    ./include
sources =
    src/timer/fil_timer.c

libraries =
    pthread

[extension=_filament.io]
language = c
name = _filament.io
include_dirs = 
    ./include
sources =
    src/io/fil_io.c
    src/io/fil_iothread.c

libraries =
    pthread
    event_pthreads
    event_core

[extension=_filament.socket]
language = c
name = _filament.socket
include_dirs = 
    ./include
sources =
    src/socket/fil_socket.c

libraries =
    pthread

[extension=_filament.thrpool]
language = c
name = _filament.thrpool
include_dirs = 
    ./include
sources =
    src/thrpool/fil_thrpool.c

libraries =
    pthread

[build_ext]
inplace = 1

[clean]
all = 1
